images resised , about banner added , header setting changed

--- a/assets/scss/layout/_header.scss
+++ b/assets/scss/layout/_header.scss
@@ -59,7 +59,7 @@ START: Header CSS
                 @include breakpoint(md) {
                     display: none;
                 }
-                li {
+                   {
                     display: inline-block;
                     position: relative;
                     margin: 0 25px;
