--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -430,9 +430,9 @@ ul {
   animation-timing-function: cubic-bezier(0.75, 0, 0.175, 1);
 }
 
-.line-wrap .line:nth-child(2) {
+/* .line-wrap .line:nth-child(2) {
   left: 50%;
-}
+} */
 
 .line-wrap .line:nth-child(2) span {
   -webkit-animation-delay: 2s;
@@ -701,7 +701,7 @@ ul {
 .reveal {
   visibility: hidden;
   position: relative;
-  width: 80%;
+  width: 100%;
   height: 80%;
   overflow: hidden;
 }
@@ -3456,7 +3456,7 @@ START: Header CSS
 /* only for about page */
 .header-3 .primary-header-inner .header-menu-wrap ul li a {
   font-family: "Hind Madurai", sans-serif;
-  color: var(--rr-color-common-black);
+  color: var(--rr-color-theme-primary);
   display: block;
   font-size: 14px;
   padding: 35px 0;
@@ -3474,8 +3474,6 @@ START: Header CSS
     font-size: 16px;
   }
 }
-
-
 
 
 .header .primary-header-inner .header-menu-wrap ul li a:hover {
@@ -3501,6 +3499,8 @@ START: Header CSS
 .header .primary-header-inner .header-menu-wrap ul li.active.menu-item-has-children:after {
   color: var(--rr-color-theme-primary);
 }
+
+
 
 .header .primary-header-inner .header-menu-wrap ul li ul {
   /* background-color: var(--rr-color-common-white); */
@@ -7799,7 +7799,7 @@ START: About CSS
   width: 100%;
   position: absolute;
   left: 18%;
-  bottom: 20px;
+  bottom: 10px;
   z-index: -1;
 }
 
@@ -7967,7 +7967,7 @@ START: About CSS
 
 .about-wrap-3 .about-text {
   position: absolute;
-  top: 50px;
+  top: 20px;
   left: 40%;
   z-index: 1;
 }
@@ -8008,9 +8008,10 @@ START: About CSS
 }
 
 .about-img-items .img-1 {
-  width: 100%;
+  width: 500px;
   height: 100%;
-  object-fit: cover;
+  object-fit: cover; 
+  /* padding-left: 3rem; */
 }
 
 .about-img-items .about-thumb-2 {
@@ -8020,7 +8021,6 @@ START: About CSS
   bottom: 0;
   right: 0;
 }
-
 
 
 .about-img-items .img-2 {
@@ -8035,11 +8035,6 @@ START: About CSS
   bottom: 0;
   right: 0;
 }
-
-
-
-
-
 
 .about-content-3 {
   position: relative;
