--- a/assets/scss/components/_theme.scss
+++ b/assets/scss/components/_theme.scss
@@ -2,10 +2,10 @@
 
 /*-----------------------------------------------------------------------------------
 
-    Template Name: Runok - Web Agency HTML5 Template
+    Template Name: R2M
     Author: RRDevs
     Support: rubelmah55@gmail.com
-    Description: Runok - Web Agency HTML5 Template
+    Description: R2M
     Version: 1.0
 
 -----------------------------------------------------------------------------------
