--- a/assets/scss/layout/_service.scss
+++ b/assets/scss/layout/_service.scss
@@ -854,6 +854,7 @@ START: Service CSS
             }
             p{
                 margin-bottom: 0;
+                text-align: justify;
             }
         }
         &:hover{
